syntax = "proto3";

package post_v1;

option go_package = "github.com/Denterry/SocialNetwork/postService/pkg/post_v1;post_v1";

// The Post service provides operations on posts/tasks.
service PostService {
    // Creates a new post/task
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    // Updates an existing post/task
    rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
    // Deletes a specific post/task
    rpc DeletePost(DeletePostRequest) returns (PostResponse);
    // Retrieves a specific post/task by ID
    rpc GetPostById(GetPostByIdRequest) returns (PostResponse);
    // Lists posts/tasks with pagination
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}


message CreatePostRequest {
    int64 authorId = 1;
    string title = 2;
    string content = 3;
}

message UpdatePostRequest {
    int64 postId = 1;
    int64 authorId = 2;
    string title = 3;
    string content = 4;
}

message DeletePostRequest {
    int64 postId = 1;
    int64 authorId = 2;
}

message GetPostByIdRequest {
    int64 postId = 1;
    int64 authorId = 2;
}

message PostResponse {
    int64 postId = 1;
    string title = 2;
    string content = 3;
    int64 authorId = 4;
}

message ListPostsRequest {
    int32 page = 1;
    int32 pageSize = 2;
    int64 authorId = 3;
}

message ListPostsResponse {
    repeated PostResponse posts = 1;
    int32 nextPage = 2;
}